src/popup/css/style.scss
html {
  box-sizing: border-box;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}
@-webkit-keyframes spin {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

@keyframes spin {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

body {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Helvetica Neue", Arial, sans-serif;
  background: #f7f7ff;
  color: #424242;
  font-size: 1rem;
  line-height: 1.5;
  overflow: hidden;
}

@media screen and (min-width: 800px) {
  body {
    position: fixed;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    box-shadow: 0px 5px 15px #00000033;
  }
}

::-moz-selection {
  background: #ffcdd2;
}
::selection {
  background: #ffcdd2;
}

a {
  color: #f44336;
  text-decoration: none;
  cursor: pointer;
  outline: 0;
}
a:hover {
  color: #d32f2f;
}

.header-tabs {
  display: flex;
  width: 100%;
}
.header-tabs a {
  display: block;
  flex: 1;
  padding: 0.625rem;
  color: #757575;
  font-size: 0.75rem;
  text-transform: uppercase;
  text-align: center;
}
.header-tabs a.active {
  color: #f44336;
  border-bottom: 2px solid #f44336;
}
.header-tabs a:hover,
.header-tabs a:focus {
  color: #d32f2f;
}
.header-tabs a.disabled {
  pointer-events: none;
  color: #ccc;
}
.icon {
  display: inline-block;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  width: 1em;
  height: 1em;
}

.loading {
  display: flex;
  justify-content: center;
  align-items: center;
  background: rgba(255, 255, 255, 0.8);
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  font-size: 40px;
  color: #616161;
}
.loading .icon {
  -webkit-animation: spin 2s infinite linear;
  animation: spin 2s infinite linear;
}

.main {
  width: 370px;
  height: 516px;
  overflow: auto;
  margin-top: 5rem;
  padding: 1rem 1rem 1rem;
}
.prompt {
  padding: 1.5rem 1rem;
  position: relative;
}
.auth {
  clear: both;
  padding: 1.5rem;
  text-align: center;
}
.auth-logo {
  margin-top: 1rem;
}
.main-logo {
  display: flex;
  justify-content: center;
}
.auth-title {
  font-size: 2rem;
  margin: 1rem 0;
  color: #424242;
}
.auth-link {
  font-size: 0.875rem;
}
.auth-link:hover,
.auth-link:focus {
  text-decoration: underline;
}

.input-field {
  display: block;
  width: 100%;
  margin: 0.75rem 0;
  padding: 0.75rem;
  border-radius: 3px;
  box-shadow: inset 0 0 3px #eeeeee;
  border: 1px solid #d9d9d9;
  background: #ffffff;
  color: #424242;
  font-size: 0.75rem;
  outline: 0;
  -webkit-appearance: none;
}
select.input-field {
  height: 39px;
  background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' width='32' height='24' viewBox='0 0 32 24'><polygon points='0,0 32,0 16,24' style='fill: rgb%2896, 125, 139%29'></polygon></svg>");
  background-origin: content-box;
  background-position: right 0 center;
  background-repeat: no-repeat;
  background-size: 9px 6px;
  cursor: pointer;
}
.input-field.special {
  padding: 0.5rem;
  font-size: 0.875rem;
  line-height: 1.5;
}
input.input-field:read-only,
textarea.input-field:read-only {
  background: #eeeeee;
}
.input-field:focus {
  outline: none;
  border-color: #80bdff;
  box-shadow: 0 0 0 0.25em rgba(0, 123, 255, 0.25);
}
.input-field::placeholder {
  color: #9e9e9e;
}
.input-field:disabled {
  position: relative;
  z-index: -1;
  background: #eeeeee;
}

.input-label {
  display: block;
  font-size: 0.75rem;
  margin: 0.75rem 0 1rem;
  color: black;
  cursor: pointer;
}

.input-label.disabled {
  color: #bbb;
}

.input-label .input-field {
  margin: 0.25rem 0 0;
}

.notifiaction-container {
  margin-top: 50px;
}
.button-group {
  margin-top: 30px;
  display: flex;
  justify-content: space-between;
}
button,
a.button {
  text-align: center;
  font-size: 13px;
  padding: 10px;
  font-weight: 400;
  min-width: 60px;
  width: 45%;
  color: white;
  border-radius: 0.3rem;
  cursor: pointer;
  background: #0a93eb;
  /* transition: all 0.2s ease; */
  white-space: nowrap;
  outline: none;
  border: none;
  border: 2px solid #0a93eb;
}
button:hover {
  background-color: #0987d7;
  border: 2px solid #0987d7;
}
button:active {
  background-color: #1f6bb7;
  border: 2px solid #1f6bb7;
}
button.outline {
  background: rgba(10, 147, 235, 0.05);
  border: 2px solid #0a93eb;
  color: black;
}
button.outline:hover {
  background-color: #c7e7fc;
}
button.outline:active {
  background-color: #76baff;
}
button.outline:disabled,
button:disabled {
  background: #e0e0e0;
  border: 2px solid #e0e0e0;
  color: #888;
}

button.add_token {
  background-color: #0987d7;
  font-size: 30px;
  width: 40px;
  height: 40px;
  color: white;
  position: absolute;
  border-radius: 20px;
  padding: 0px;
  right: 20px;
  min-width: 40px;
  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.6);
  bottom: 20px;
}

button.add_token:hover {
  background-color: #3b9ddb;
}

button.add_token:active {
  background-color: #1d7ab5;
}
.full-width {
  width: 100%;
  height: 40px;
}
.input-group {
  display: flex;
  margin: 0.75rem 0;
}
.input-group .input-field {
  flex: 1;
  border-right: none;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  margin: 0;
}
.input-group .button {
  width: auto;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  border: 1px solid #d9d9d9;
  background: #ddd;
  color: black;
  box-shadow: none;
  font-size: 1rem;
  margin: 0;
  padding: 0.5rem 0.75rem;
}
.input-group .button:hover,
.input-group .button:focus {
  background: #fafafa;
}
.input-group .button:active {
  transform: none;
  background: #f5f5f5;
}

.form-info {
  color: #616161;
  font-size: 0.75rem;
  text-align: left;
  margin: 0.75rem 0 1rem;
}
.form-info.center {
  text-align: center;
}

.message {
  text-align: left;
  background: #e0e0e0;
  border-left: 5px solid #bdbdbd;
  color: #757575;
  padding: 0.5rem;
  font-size: 0.7rem;
  word-break: break-all;
}
.message.error {
  background: #ffcdd2;
  border-left-color: #e57373;
  color: #e53935;
}
.message.success {
  background: #dcedc8;
  border-left-color: #aed581;
  color: #465410;
  word-wrap: break-word;
  cursor: pointer;
}

.line-through {
  position: relative;
  margin: 20px 0;
  color: #9e9e9e;
  font-size: 0.75rem;
  line-height: 1;
}
.line-through::before {
  content: "";
  display: block;
  width: 100%;
  border-top: 1px solid #cccccc;
  position: absolute;
  top: 50%;
  z-index: 1;
}
.line-through span {
  position: relative;
  background: #fafafa;
  padding: 3px 10px;
  z-index: 10;
}

.divider {
  height: 1px;
  margin-top: 15px;
  margin-bottom: 15px;
  width: 100%;
  border-top: 1px solid #bbb;
}
.box {
  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
  background: #ffffff;
  border-radius: 5px;
  padding: 1rem;
  margin-bottom: 1.5rem;
  overflow: hidden;
  font-size: 0.875rem;
  text-align: center;
}
.box.highlight {
  box-shadow: 0 5px 25px rgba(0, 0, 0, 0.1);
}
.box.no-padding {
  padding: 0;
}

.box-label {
  font-size: 0.625rem;
  text-transform: uppercase;
  color: #555;
}

.box-balance {
  font-size: 2rem;
  font-weight: 600;
  word-wrap: break-word;
}
.box-balance-code {
  color: #666;
  font-size: 1rem;
  text-transform: uppercase;
  padding: 0 0 1rem;
}

.box-text {
  font-size: 0.75rem;
  color: #9e9e9e;
}
.box-expires {
  font-weight: 600;
}

.box-buttons {
  display: flex;
  margin: 1rem -1rem -1rem;
  border-top: 1px solid #eeeeee;
}
.box-buttons a {
  display: block;
  flex: 1;
  margin: 0;
  padding: 1rem;
  font-size: 0.75rem;
  text-align: center;
  text-transform: uppercase;
}
.box-buttons a {
  border-right: 1px solid #eeeeee;
  color: #757575;
}
.box-buttons a.red {
  color: #f44336;
}
.box-buttons a.green {
  color: #8bc34a;
}
.box-buttons a.blue {
  color: #03a9f4;
}
.box-buttons a:last-child {
  border-right: none;
}
.box-buttons a:hover,
.box-buttons a:focus {
  background: #fafafa;
}
.box-buttons a:active {
  box-shadow: inset 0 1px 3px rgba(238, 238, 238, 0.5);
}
.box-buttons a:active span {
  display: block;
  transform: translateY(1px);
}

.box-row {
  display: flex;
  border-bottom: 1px solid #eeeeee;
}
.box-row:last-child {
  border-bottom: none;
}
.box-column {
  border-right: 1px solid #eeeeee;
  padding: 1rem;
  flex: 1;
  width: 50%;
}
.box-row:last-child {
  border-right: none;
}
.box-column .box-balance {
  font-size: 1.125rem;
}
.box-column .box-balance-code {
  font-size: 0.625rem;
  color: #bdbdbd;
  margin-top: 5px;
  padding: 0;
}

.column {
  display: flex;
  flex-direction: column;
}

.row {
  display: flex;
  flex-direction: row;
}
.transaction {
  display: flex;
  padding: 12px 12px;
  background: white;
}
.transaction__logo {
  max-height: 100%;
  max-width: 52px;
  border: 2px solid;
  border-radius: 50%;
  display: block;
  border-color: #ed553b;
}

.transaction__meta {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin-left: 18px;
}
.transaction__caption {
  color: black;
  line-height: 18px;
  font-size: 18px;
  padding-bottom: 4px;
}

.transaction__information {
  max-height: 100px;
  overflow: auto;
  font-size: 14px;
  color: var(--primary-text-color);
  margin: 10px 0px 5px 0px;
}

.invoice {
  font-size: 14px;
}

.invoice__row {
  display: flex;
  justify-content: space-between;
  padding: 5px 0;
}

.invoice__divider {
  height: 1px;
  margin-top: 6px;
  margin-bottom: 6px;
  background-color: #aaa;
}
.addressRow {
  font-size: 14px;
}
.address__name {
  display: inline-block;
  color: #0987d7;
  cursor: pointer;
}
.box-address-label {
  font-size: 0.8rem;
  text-transform: uppercase;
  color: #555;
  margin: 0.5rem 0 0.25rem;
}
.box-address {
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 0.75rem;
  font-weight: 600;
  margin-bottom: 0.5rem;
  color: #555;
}

.message-empty {
  padding: 0.75rem;
  font-size: 0.875rem;
  text-align: center;
  color: #bdbdbd;
}

.load-more {
  display: block;
  padding: 1rem;
  font-size: 0.75rem;
  text-align: center;
  text-transform: uppercase;
}

